# assignment

./: .gitignore  README.md  pyproject.toml  requirements.txt  task2.py
