[project]
name = "neural-network-mlp"
version = "1.0.0"
description = "Two-layer perceptron implementation with backpropagation for deep learning tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy==2.3.4",
    "matplotlib==3.10.7",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.60.1",
    "kiwisolver==1.4.9",
    "packaging==25.0",
    "pillow==12.0.0",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
